--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -148,50 +148,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -278,6 +234,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -355,18 +355,24 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="dee3b68e4d2346c7866ffa33a40e4485-e5837302ba2d4ab29d369466d7418f1e" name="dee3b68e4d2346c7866ffa33a40e4485" class="tab" checked=""><label for="dee3b68e4d2346c7866ffa33a40e4485-e5837302ba2d4ab29d369466d7418f1e">General</label>
-<input type="radio" id="dee3b68e4d2346c7866ffa33a40e4485-d2f069c4af564059b26ce9a4fc72bb3d" name="dee3b68e4d2346c7866ffa33a40e4485" class="tab"><label for="dee3b68e4d2346c7866ffa33a40e4485-d2f069c4af564059b26ce9a4fc72bb3d">Startup</label>
-<input type="radio" id="dee3b68e4d2346c7866ffa33a40e4485-db254b1aacdd4819b62b2d8e4cfb2bfb" name="dee3b68e4d2346c7866ffa33a40e4485" class="tab"><label for="dee3b68e4d2346c7866ffa33a40e4485-db254b1aacdd4819b62b2d8e4cfb2bfb">Android</label>
-<input type="radio" id="dee3b68e4d2346c7866ffa33a40e4485-674ec5687ac14aa98db6079f62bfbd43" name="dee3b68e4d2346c7866ffa33a40e4485" class="tab"><label for="dee3b68e4d2346c7866ffa33a40e4485-674ec5687ac14aa98db6079f62bfbd43">iOS</label>
-<input type="radio" id="dee3b68e4d2346c7866ffa33a40e4485-4b2131a26ad84dc7a75852516309a4d4" name="dee3b68e4d2346c7866ffa33a40e4485" class="tab"><label for="dee3b68e4d2346c7866ffa33a40e4485-4b2131a26ad84dc7a75852516309a4d4">Windows</label>
+<input type="radio" id="2a508a3e66364ef9b49b6cf738b26470-c3757acd668e49a9b56b501c61738976" name="2a508a3e66364ef9b49b6cf738b26470" class="tab" checked=""><label for="2a508a3e66364ef9b49b6cf738b26470-c3757acd668e49a9b56b501c61738976">General</label>
+<input type="radio" id="2a508a3e66364ef9b49b6cf738b26470-354a633c052448148a9dff934db55906" name="2a508a3e66364ef9b49b6cf738b26470" class="tab"><label for="2a508a3e66364ef9b49b6cf738b26470-354a633c052448148a9dff934db55906">Startup</label>
+<input type="radio" id="2a508a3e66364ef9b49b6cf738b26470-324caac77572408d830ced976bcebab7" name="2a508a3e66364ef9b49b6cf738b26470" class="tab"><label for="2a508a3e66364ef9b49b6cf738b26470-324caac77572408d830ced976bcebab7">Android</label>
+<input type="radio" id="2a508a3e66364ef9b49b6cf738b26470-dda3eddd79644a7ab9ebaa6dd400253f" name="2a508a3e66364ef9b49b6cf738b26470" class="tab"><label for="2a508a3e66364ef9b49b6cf738b26470-dda3eddd79644a7ab9ebaa6dd400253f">iOS</label>
+<input type="radio" id="2a508a3e66364ef9b49b6cf738b26470-d4cf3fa7c9b94e4a8f1fb39daa5f2635" name="2a508a3e66364ef9b49b6cf738b26470" class="tab"><label for="2a508a3e66364ef9b49b6cf738b26470-d4cf3fa7c9b94e4a8f1fb39daa5f2635">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
