--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="2c8472fa5a4b48319a53b105c89f81df-1de37b5dfafb4bfb9948aeb2b473b48b" name="2c8472fa5a4b48319a53b105c89f81df" class="tab" checked><label for="2c8472fa5a4b48319a53b105c89f81df-1de37b5dfafb4bfb9948aeb2b473b48b" >General</label>
-<input type="radio" id="2c8472fa5a4b48319a53b105c89f81df-3dce861fc09a4912ab51ec74513ed6e0" name="2c8472fa5a4b48319a53b105c89f81df" class="tab" ><label for="2c8472fa5a4b48319a53b105c89f81df-3dce861fc09a4912ab51ec74513ed6e0" >Startup</label>
-<input type="radio" id="2c8472fa5a4b48319a53b105c89f81df-83ea24529f90465b8a46e2ca990328d9" name="2c8472fa5a4b48319a53b105c89f81df" class="tab" ><label for="2c8472fa5a4b48319a53b105c89f81df-83ea24529f90465b8a46e2ca990328d9" >Android</label>
-<input type="radio" id="2c8472fa5a4b48319a53b105c89f81df-36523ddf565e42de891bf5af522c6dec" name="2c8472fa5a4b48319a53b105c89f81df" class="tab" ><label for="2c8472fa5a4b48319a53b105c89f81df-36523ddf565e42de891bf5af522c6dec" >iOS</label>
-<input type="radio" id="2c8472fa5a4b48319a53b105c89f81df-43177c415f8a43f9a2315a85cd872e82" name="2c8472fa5a4b48319a53b105c89f81df" class="tab" ><label for="2c8472fa5a4b48319a53b105c89f81df-43177c415f8a43f9a2315a85cd872e82" >Windows</label>
+<input type="radio" id="95fc4217a4564623a2e237cb5b018568-97c2683cc16b48459f429a3e5bc288bc" name="95fc4217a4564623a2e237cb5b018568" class="tab" checked><label for="95fc4217a4564623a2e237cb5b018568-97c2683cc16b48459f429a3e5bc288bc" >General</label>
+<input type="radio" id="95fc4217a4564623a2e237cb5b018568-e6ea3d2575114333847d51c13c78a747" name="95fc4217a4564623a2e237cb5b018568" class="tab" ><label for="95fc4217a4564623a2e237cb5b018568-e6ea3d2575114333847d51c13c78a747" >Startup</label>
+<input type="radio" id="95fc4217a4564623a2e237cb5b018568-c0f48b2404ea444d8544b2b499741195" name="95fc4217a4564623a2e237cb5b018568" class="tab" ><label for="95fc4217a4564623a2e237cb5b018568-c0f48b2404ea444d8544b2b499741195" >Android</label>
+<input type="radio" id="95fc4217a4564623a2e237cb5b018568-205e4178d12443088fe9b782b01542b1" name="95fc4217a4564623a2e237cb5b018568" class="tab" ><label for="95fc4217a4564623a2e237cb5b018568-205e4178d12443088fe9b782b01542b1" >iOS</label>
+<input type="radio" id="95fc4217a4564623a2e237cb5b018568-2c23e270693846d5b35bacc4b73873dc" name="95fc4217a4564623a2e237cb5b018568" class="tab" ><label for="95fc4217a4564623a2e237cb5b018568-2c23e270693846d5b35bacc4b73873dc" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
