--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="e646692de5d44a12a78d76bf52f2237a-f66840b4bbb249709a8658189075d829" name="e646692de5d44a12a78d76bf52f2237a" class="tab" checked><label for="e646692de5d44a12a78d76bf52f2237a-f66840b4bbb249709a8658189075d829" >General</label>
-<input type="radio" id="e646692de5d44a12a78d76bf52f2237a-b0eb16c5b4054d6ebf1840f4c7a0a3d3" name="e646692de5d44a12a78d76bf52f2237a" class="tab" ><label for="e646692de5d44a12a78d76bf52f2237a-b0eb16c5b4054d6ebf1840f4c7a0a3d3" >Startup</label>
-<input type="radio" id="e646692de5d44a12a78d76bf52f2237a-cf4b6b1366bd451984212670b15c3800" name="e646692de5d44a12a78d76bf52f2237a" class="tab" ><label for="e646692de5d44a12a78d76bf52f2237a-cf4b6b1366bd451984212670b15c3800" >Android</label>
-<input type="radio" id="e646692de5d44a12a78d76bf52f2237a-e200de78c53f4a18b794ec59e062bdef" name="e646692de5d44a12a78d76bf52f2237a" class="tab" ><label for="e646692de5d44a12a78d76bf52f2237a-e200de78c53f4a18b794ec59e062bdef" >iOS</label>
-<input type="radio" id="e646692de5d44a12a78d76bf52f2237a-edeb52b792364193a3af3b14d1195079" name="e646692de5d44a12a78d76bf52f2237a" class="tab" ><label for="e646692de5d44a12a78d76bf52f2237a-edeb52b792364193a3af3b14d1195079" >Windows</label>
+<input type="radio" id="e467cab0106d4aaf8c36003cca86e887-ad3281cd422a4c24b971af442927bb1f" name="e467cab0106d4aaf8c36003cca86e887" class="tab" checked><label for="e467cab0106d4aaf8c36003cca86e887-ad3281cd422a4c24b971af442927bb1f" >General</label>
+<input type="radio" id="e467cab0106d4aaf8c36003cca86e887-e94a325f3c5d426f89dbec7316c2ed95" name="e467cab0106d4aaf8c36003cca86e887" class="tab" ><label for="e467cab0106d4aaf8c36003cca86e887-e94a325f3c5d426f89dbec7316c2ed95" >Startup</label>
+<input type="radio" id="e467cab0106d4aaf8c36003cca86e887-6702aa6820d64e76b85ecb4554373b1e" name="e467cab0106d4aaf8c36003cca86e887" class="tab" ><label for="e467cab0106d4aaf8c36003cca86e887-6702aa6820d64e76b85ecb4554373b1e" >Android</label>
+<input type="radio" id="e467cab0106d4aaf8c36003cca86e887-7fd39d06163c49f7bc25fe3486c39e0d" name="e467cab0106d4aaf8c36003cca86e887" class="tab" ><label for="e467cab0106d4aaf8c36003cca86e887-7fd39d06163c49f7bc25fe3486c39e0d" >iOS</label>
+<input type="radio" id="e467cab0106d4aaf8c36003cca86e887-609ba9e13cd249e5b541b428a296fe93" name="e467cab0106d4aaf8c36003cca86e887" class="tab" ><label for="e467cab0106d4aaf8c36003cca86e887-609ba9e13cd249e5b541b428a296fe93" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
