--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children active">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="4ab83b66cc624a53948a4bd0a10ab0b9-4e61a83442324f208998e9ddc368c095" name="4ab83b66cc624a53948a4bd0a10ab0b9" class="tab" checked><label for="4ab83b66cc624a53948a4bd0a10ab0b9-4e61a83442324f208998e9ddc368c095" >General</label>
-<input type="radio" id="4ab83b66cc624a53948a4bd0a10ab0b9-5dd76f83fe1d402b91d0a90a7d56063d" name="4ab83b66cc624a53948a4bd0a10ab0b9" class="tab" ><label for="4ab83b66cc624a53948a4bd0a10ab0b9-5dd76f83fe1d402b91d0a90a7d56063d" >Startup</label>
-<input type="radio" id="4ab83b66cc624a53948a4bd0a10ab0b9-da335143ad044181be7644328a6059e8" name="4ab83b66cc624a53948a4bd0a10ab0b9" class="tab" ><label for="4ab83b66cc624a53948a4bd0a10ab0b9-da335143ad044181be7644328a6059e8" >Android</label>
-<input type="radio" id="4ab83b66cc624a53948a4bd0a10ab0b9-52849bfa646a458298ea388ffd269888" name="4ab83b66cc624a53948a4bd0a10ab0b9" class="tab" ><label for="4ab83b66cc624a53948a4bd0a10ab0b9-52849bfa646a458298ea388ffd269888" >iOS</label>
-<input type="radio" id="4ab83b66cc624a53948a4bd0a10ab0b9-42b4d2df22a34c67b9ed2e34593bf561" name="4ab83b66cc624a53948a4bd0a10ab0b9" class="tab" ><label for="4ab83b66cc624a53948a4bd0a10ab0b9-42b4d2df22a34c67b9ed2e34593bf561" >Windows</label>
+<input type="radio" id="00866370be904477bd1bb74f002e7264-7f56fae9b23944d1b3ccbafc8bc1a4a9" name="00866370be904477bd1bb74f002e7264" class="tab" checked><label for="00866370be904477bd1bb74f002e7264-7f56fae9b23944d1b3ccbafc8bc1a4a9" >General</label>
+<input type="radio" id="00866370be904477bd1bb74f002e7264-835790fbef5f4131bdf64252a7f5ed5c" name="00866370be904477bd1bb74f002e7264" class="tab" ><label for="00866370be904477bd1bb74f002e7264-835790fbef5f4131bdf64252a7f5ed5c" >Startup</label>
+<input type="radio" id="00866370be904477bd1bb74f002e7264-362ceec09ab64ea1849065496dfbf883" name="00866370be904477bd1bb74f002e7264" class="tab" ><label for="00866370be904477bd1bb74f002e7264-362ceec09ab64ea1849065496dfbf883" >Android</label>
+<input type="radio" id="00866370be904477bd1bb74f002e7264-846958c6b5fd49aaa6de87da0861607f" name="00866370be904477bd1bb74f002e7264" class="tab" ><label for="00866370be904477bd1bb74f002e7264-846958c6b5fd49aaa6de87da0861607f" >iOS</label>
+<input type="radio" id="00866370be904477bd1bb74f002e7264-37c4daaddef5434cb09f445fc810939e" name="00866370be904477bd1bb74f002e7264" class="tab" ><label for="00866370be904477bd1bb74f002e7264-37c4daaddef5434cb09f445fc810939e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
