--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children active">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,7 +357,13 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -372,10 +378,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="8c51c94a895646d3b383ee9590a07e35-bdbf23ced61c4249baa0603234e0468c" name="8c51c94a895646d3b383ee9590a07e35" class="tab" checked><label for="8c51c94a895646d3b383ee9590a07e35-bdbf23ced61c4249baa0603234e0468c" >General</label>
-<input type="radio" id="8c51c94a895646d3b383ee9590a07e35-92629bc24978451f90f3bc02a6de3a03" name="8c51c94a895646d3b383ee9590a07e35" class="tab" ><label for="8c51c94a895646d3b383ee9590a07e35-92629bc24978451f90f3bc02a6de3a03" >Startup</label>
-<input type="radio" id="8c51c94a895646d3b383ee9590a07e35-d7a85d6ced754d4a95a16505ada207fd" name="8c51c94a895646d3b383ee9590a07e35" class="tab" ><label for="8c51c94a895646d3b383ee9590a07e35-d7a85d6ced754d4a95a16505ada207fd" >Android</label>
-<input type="radio" id="8c51c94a895646d3b383ee9590a07e35-9ac6357abae44eb9905ef62afba23354" name="8c51c94a895646d3b383ee9590a07e35" class="tab" ><label for="8c51c94a895646d3b383ee9590a07e35-9ac6357abae44eb9905ef62afba23354" >iOS</label>
+<input type="radio" id="7ad92ba843b041c4986441109dffea29-d10325ed829940fcad15b45aba822332" name="7ad92ba843b041c4986441109dffea29" class="tab" checked><label for="7ad92ba843b041c4986441109dffea29-d10325ed829940fcad15b45aba822332" >General</label>
+<input type="radio" id="7ad92ba843b041c4986441109dffea29-06797682df9d41fea26b5034cd32027f" name="7ad92ba843b041c4986441109dffea29" class="tab" ><label for="7ad92ba843b041c4986441109dffea29-06797682df9d41fea26b5034cd32027f" >Startup</label>
+<input type="radio" id="7ad92ba843b041c4986441109dffea29-f0fd21757d034fc8b70a8ad7cc37a8a1" name="7ad92ba843b041c4986441109dffea29" class="tab" ><label for="7ad92ba843b041c4986441109dffea29-f0fd21757d034fc8b70a8ad7cc37a8a1" >Android</label>
+<input type="radio" id="7ad92ba843b041c4986441109dffea29-623467c862064f3c946da1be1c7f82f5" name="7ad92ba843b041c4986441109dffea29" class="tab" ><label for="7ad92ba843b041c4986441109dffea29-623467c862064f3c946da1be1c7f82f5" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
