--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -148,50 +148,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -278,6 +234,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -355,7 +355,13 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -364,11 +370,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="c0ffafcb7dfc4976b857c9f5ef9345e3-cc80934123024d27a2145e785266ea32" name="c0ffafcb7dfc4976b857c9f5ef9345e3" class="tab" checked=""><label for="c0ffafcb7dfc4976b857c9f5ef9345e3-cc80934123024d27a2145e785266ea32">General</label>
-<input type="radio" id="c0ffafcb7dfc4976b857c9f5ef9345e3-95d5bf95dbdf4c7ba861c0b4bbf24dba" name="c0ffafcb7dfc4976b857c9f5ef9345e3" class="tab"><label for="c0ffafcb7dfc4976b857c9f5ef9345e3-95d5bf95dbdf4c7ba861c0b4bbf24dba">Startup</label>
-<input type="radio" id="c0ffafcb7dfc4976b857c9f5ef9345e3-205990f4158f4d6baaf32e9fd5a00d06" name="c0ffafcb7dfc4976b857c9f5ef9345e3" class="tab"><label for="c0ffafcb7dfc4976b857c9f5ef9345e3-205990f4158f4d6baaf32e9fd5a00d06">Android</label>
-<input type="radio" id="c0ffafcb7dfc4976b857c9f5ef9345e3-7ad2acc164a945cc875ef8e943249abc" name="c0ffafcb7dfc4976b857c9f5ef9345e3" class="tab"><label for="c0ffafcb7dfc4976b857c9f5ef9345e3-7ad2acc164a945cc875ef8e943249abc">iOS</label>
-<input type="radio" id="c0ffafcb7dfc4976b857c9f5ef9345e3-ac48f78559fa457cba299ba64184c78d" name="c0ffafcb7dfc4976b857c9f5ef9345e3" class="tab"><label for="c0ffafcb7dfc4976b857c9f5ef9345e3-ac48f78559fa457cba299ba64184c78d">Windows</label>
+<input type="radio" id="85088ac2f5984aaca742bc36e3d2635e-fc3a558dc2c64d56a0bd3a54f20d5802" name="85088ac2f5984aaca742bc36e3d2635e" class="tab" checked=""><label for="85088ac2f5984aaca742bc36e3d2635e-fc3a558dc2c64d56a0bd3a54f20d5802">General</label>
+<input type="radio" id="85088ac2f5984aaca742bc36e3d2635e-5cc8d2c5872645b39433ac2e89bd1642" name="85088ac2f5984aaca742bc36e3d2635e" class="tab"><label for="85088ac2f5984aaca742bc36e3d2635e-5cc8d2c5872645b39433ac2e89bd1642">Startup</label>
+<input type="radio" id="85088ac2f5984aaca742bc36e3d2635e-a62f9f4e5cf2407588f89f1cc9493732" name="85088ac2f5984aaca742bc36e3d2635e" class="tab"><label for="85088ac2f5984aaca742bc36e3d2635e-a62f9f4e5cf2407588f89f1cc9493732">Android</label>
+<input type="radio" id="85088ac2f5984aaca742bc36e3d2635e-5e9d368712b448bbbda282a6a8ca3576" name="85088ac2f5984aaca742bc36e3d2635e" class="tab"><label for="85088ac2f5984aaca742bc36e3d2635e-5e9d368712b448bbbda282a6a8ca3576">iOS</label>
+<input type="radio" id="85088ac2f5984aaca742bc36e3d2635e-929e58d259ee4432be1a189dc74ae00d" name="85088ac2f5984aaca742bc36e3d2635e" class="tab"><label for="85088ac2f5984aaca742bc36e3d2635e-929e58d259ee4432be1a189dc74ae00d">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
