--- a/push/azure.html
+++ b/push/azure.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="ac9a98766b5449a498818e3e106f7975-d3d1abc5f476419886a47c2e26b3a54a" name="ac9a98766b5449a498818e3e106f7975" class="tab" checked><label for="ac9a98766b5449a498818e3e106f7975-d3d1abc5f476419886a47c2e26b3a54a" >General</label>
-<input type="radio" id="ac9a98766b5449a498818e3e106f7975-abbabfaee1bc42588a8cea53f1b65324" name="ac9a98766b5449a498818e3e106f7975" class="tab" ><label for="ac9a98766b5449a498818e3e106f7975-abbabfaee1bc42588a8cea53f1b65324" >Startup</label>
-<input type="radio" id="ac9a98766b5449a498818e3e106f7975-86e8e72fb8084223aa57e6d7ea557c18" name="ac9a98766b5449a498818e3e106f7975" class="tab" ><label for="ac9a98766b5449a498818e3e106f7975-86e8e72fb8084223aa57e6d7ea557c18" >Android</label>
-<input type="radio" id="ac9a98766b5449a498818e3e106f7975-aa27b0f6afe843c0b6d544efacfcddce" name="ac9a98766b5449a498818e3e106f7975" class="tab" ><label for="ac9a98766b5449a498818e3e106f7975-aa27b0f6afe843c0b6d544efacfcddce" >iOS</label>
-<input type="radio" id="ac9a98766b5449a498818e3e106f7975-e0379fec5da34ff2936f81868e980a2e" name="ac9a98766b5449a498818e3e106f7975" class="tab" ><label for="ac9a98766b5449a498818e3e106f7975-e0379fec5da34ff2936f81868e980a2e" >Windows</label>
+<input type="radio" id="048f9c5c5ea2474a96cf6010f68ba643-84307d45de2b41cb89d803f2c74d47e9" name="048f9c5c5ea2474a96cf6010f68ba643" class="tab" checked><label for="048f9c5c5ea2474a96cf6010f68ba643-84307d45de2b41cb89d803f2c74d47e9" >General</label>
+<input type="radio" id="048f9c5c5ea2474a96cf6010f68ba643-a1954f2a7585420d83c1e19f1fbcd100" name="048f9c5c5ea2474a96cf6010f68ba643" class="tab" ><label for="048f9c5c5ea2474a96cf6010f68ba643-a1954f2a7585420d83c1e19f1fbcd100" >Startup</label>
+<input type="radio" id="048f9c5c5ea2474a96cf6010f68ba643-a8b638df7b5240c3b9ae3b2a3cd360aa" name="048f9c5c5ea2474a96cf6010f68ba643" class="tab" ><label for="048f9c5c5ea2474a96cf6010f68ba643-a8b638df7b5240c3b9ae3b2a3cd360aa" >Android</label>
+<input type="radio" id="048f9c5c5ea2474a96cf6010f68ba643-a0212091f3b34f078f27a31928fa5bca" name="048f9c5c5ea2474a96cf6010f68ba643" class="tab" ><label for="048f9c5c5ea2474a96cf6010f68ba643-a0212091f3b34f078f27a31928fa5bca" >iOS</label>
+<input type="radio" id="048f9c5c5ea2474a96cf6010f68ba643-36d40cbc1a3f4b689c73fcea3e391d5e" name="048f9c5c5ea2474a96cf6010f68ba643" class="tab" ><label for="048f9c5c5ea2474a96cf6010f68ba643-36d40cbc1a3f4b689c73fcea3e391d5e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
