--- a/push/firebase.html
+++ b/push/firebase.html
@@ -148,50 +148,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -278,6 +234,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -355,16 +355,22 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="7401fdfb2824410f8836db49d2ce1714-3c4fb5df8d39485bba06c9501f405063" name="7401fdfb2824410f8836db49d2ce1714" class="tab" checked=""><label for="7401fdfb2824410f8836db49d2ce1714-3c4fb5df8d39485bba06c9501f405063">General</label>
-<input type="radio" id="7401fdfb2824410f8836db49d2ce1714-b0f72386a6ad499099ba9953f68fbd17" name="7401fdfb2824410f8836db49d2ce1714" class="tab"><label for="7401fdfb2824410f8836db49d2ce1714-b0f72386a6ad499099ba9953f68fbd17">Startup</label>
-<input type="radio" id="7401fdfb2824410f8836db49d2ce1714-72f3fcfc8171470f9afdb1dc3512dc05" name="7401fdfb2824410f8836db49d2ce1714" class="tab"><label for="7401fdfb2824410f8836db49d2ce1714-72f3fcfc8171470f9afdb1dc3512dc05">Android</label>
-<input type="radio" id="7401fdfb2824410f8836db49d2ce1714-0c9fbc9bff24491d9a664dcf5e71a0ea" name="7401fdfb2824410f8836db49d2ce1714" class="tab"><label for="7401fdfb2824410f8836db49d2ce1714-0c9fbc9bff24491d9a664dcf5e71a0ea">iOS</label>
+<input type="radio" id="85f0ef1dc66c428cbdbcd36781486be6-7a3a98c94b21401da30e58efc3d90a5d" name="85f0ef1dc66c428cbdbcd36781486be6" class="tab" checked=""><label for="85f0ef1dc66c428cbdbcd36781486be6-7a3a98c94b21401da30e58efc3d90a5d">General</label>
+<input type="radio" id="85f0ef1dc66c428cbdbcd36781486be6-889f98f469804a8ab0844d496db1f6fc" name="85f0ef1dc66c428cbdbcd36781486be6" class="tab"><label for="85f0ef1dc66c428cbdbcd36781486be6-889f98f469804a8ab0844d496db1f6fc">Startup</label>
+<input type="radio" id="85f0ef1dc66c428cbdbcd36781486be6-2ed426fcd69647ff9640ec5fa40bcea9" name="85f0ef1dc66c428cbdbcd36781486be6" class="tab"><label for="85f0ef1dc66c428cbdbcd36781486be6-2ed426fcd69647ff9640ec5fa40bcea9">Android</label>
+<input type="radio" id="85f0ef1dc66c428cbdbcd36781486be6-bee0eb45d254482e90c36ae8cd438cd2" name="85f0ef1dc66c428cbdbcd36781486be6" class="tab"><label for="85f0ef1dc66c428cbdbcd36781486be6-bee0eb45d254482e90c36ae8cd438cd2">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
