--- a/push/native.html
+++ b/push/native.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,7 +357,13 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -365,11 +371,11 @@
                                     <p>Native push is the root of all other push providers.  It works at the native OS level and is usually feeding other providers like Azure Notification Hubs and Firebase.  As such, the setup instructions found
 within this document generally apply to all.</p>
 <div class="tab-wrap">
-<input type="radio" id="67be71768bad494ab5f8a15c46ce9646-8a0ab37e64d6476abf2d6c1db3f01663" name="67be71768bad494ab5f8a15c46ce9646" class="tab" checked><label for="67be71768bad494ab5f8a15c46ce9646-8a0ab37e64d6476abf2d6c1db3f01663" >General</label>
-<input type="radio" id="67be71768bad494ab5f8a15c46ce9646-b3d262d80e4241b1944f4a26ce3620fd" name="67be71768bad494ab5f8a15c46ce9646" class="tab" ><label for="67be71768bad494ab5f8a15c46ce9646-b3d262d80e4241b1944f4a26ce3620fd" >Startup</label>
-<input type="radio" id="67be71768bad494ab5f8a15c46ce9646-d157f26ed7b648b29f2c7780ec2cae75" name="67be71768bad494ab5f8a15c46ce9646" class="tab" ><label for="67be71768bad494ab5f8a15c46ce9646-d157f26ed7b648b29f2c7780ec2cae75" >Android</label>
-<input type="radio" id="67be71768bad494ab5f8a15c46ce9646-899cc460050b4552bd3e8cf45e600623" name="67be71768bad494ab5f8a15c46ce9646" class="tab" ><label for="67be71768bad494ab5f8a15c46ce9646-899cc460050b4552bd3e8cf45e600623" >iOS</label>
-<input type="radio" id="67be71768bad494ab5f8a15c46ce9646-840acc1e5e5148c6b078903b779bdc30" name="67be71768bad494ab5f8a15c46ce9646" class="tab" ><label for="67be71768bad494ab5f8a15c46ce9646-840acc1e5e5148c6b078903b779bdc30" >Windows</label>
+<input type="radio" id="6e9d15a44ce342b1b08242745d0fff96-6e312fa5f1b74770869d076e283dde19" name="6e9d15a44ce342b1b08242745d0fff96" class="tab" checked><label for="6e9d15a44ce342b1b08242745d0fff96-6e312fa5f1b74770869d076e283dde19" >General</label>
+<input type="radio" id="6e9d15a44ce342b1b08242745d0fff96-a41e27e736fd479d87ff579b40d33e53" name="6e9d15a44ce342b1b08242745d0fff96" class="tab" ><label for="6e9d15a44ce342b1b08242745d0fff96-a41e27e736fd479d87ff579b40d33e53" >Startup</label>
+<input type="radio" id="6e9d15a44ce342b1b08242745d0fff96-36006ac0b36646af88130c5ed84e7177" name="6e9d15a44ce342b1b08242745d0fff96" class="tab" ><label for="6e9d15a44ce342b1b08242745d0fff96-36006ac0b36646af88130c5ed84e7177" >Android</label>
+<input type="radio" id="6e9d15a44ce342b1b08242745d0fff96-5077429032dd4b358a0a7b0698a19a95" name="6e9d15a44ce342b1b08242745d0fff96" class="tab" ><label for="6e9d15a44ce342b1b08242745d0fff96-5077429032dd4b358a0a7b0698a19a95" >iOS</label>
+<input type="radio" id="6e9d15a44ce342b1b08242745d0fff96-476e6b308cdd498a9d389dc3b3ffe745" name="6e9d15a44ce342b1b08242745d0fff96" class="tab" ><label for="6e9d15a44ce342b1b08242745d0fff96-476e6b308cdd498a9d389dc3b3ffe745" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
