--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,16 +357,22 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="5a2f99ff79e5457582a2e42234b3a0da-43b652b44af2402bad6ad544e27a07ef" name="5a2f99ff79e5457582a2e42234b3a0da" class="tab" checked><label for="5a2f99ff79e5457582a2e42234b3a0da-43b652b44af2402bad6ad544e27a07ef" >General</label>
-<input type="radio" id="5a2f99ff79e5457582a2e42234b3a0da-ab4a18656bc642b4918cafb224400e8f" name="5a2f99ff79e5457582a2e42234b3a0da" class="tab" ><label for="5a2f99ff79e5457582a2e42234b3a0da-ab4a18656bc642b4918cafb224400e8f" >Startup</label>
-<input type="radio" id="5a2f99ff79e5457582a2e42234b3a0da-98bc80258e684c5baf9178410af9620a" name="5a2f99ff79e5457582a2e42234b3a0da" class="tab" ><label for="5a2f99ff79e5457582a2e42234b3a0da-98bc80258e684c5baf9178410af9620a" >Android</label>
-<input type="radio" id="5a2f99ff79e5457582a2e42234b3a0da-4e760c8161974121a85a3daffa566096" name="5a2f99ff79e5457582a2e42234b3a0da" class="tab" ><label for="5a2f99ff79e5457582a2e42234b3a0da-4e760c8161974121a85a3daffa566096" >iOS</label>
+<input type="radio" id="e80d9b93fd134be68b0205ca2dd44dcb-ebcec04e44794104a641fe50cdb20e29" name="e80d9b93fd134be68b0205ca2dd44dcb" class="tab" checked><label for="e80d9b93fd134be68b0205ca2dd44dcb-ebcec04e44794104a641fe50cdb20e29" >General</label>
+<input type="radio" id="e80d9b93fd134be68b0205ca2dd44dcb-31b43eec9c4e4467871d30fd4ee26c06" name="e80d9b93fd134be68b0205ca2dd44dcb" class="tab" ><label for="e80d9b93fd134be68b0205ca2dd44dcb-31b43eec9c4e4467871d30fd4ee26c06" >Startup</label>
+<input type="radio" id="e80d9b93fd134be68b0205ca2dd44dcb-e585958c52ff4be6ad2efe17fa1c6bae" name="e80d9b93fd134be68b0205ca2dd44dcb" class="tab" ><label for="e80d9b93fd134be68b0205ca2dd44dcb-e585958c52ff4be6ad2efe17fa1c6bae" >Android</label>
+<input type="radio" id="e80d9b93fd134be68b0205ca2dd44dcb-e5254f6d0187424fa857c2b5d93fa6d3" name="e80d9b93fd134be68b0205ca2dd44dcb" class="tab" ><label for="e80d9b93fd134be68b0205ca2dd44dcb-e5254f6d0187424fa857c2b5d93fa6d3" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
