--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b5dd9c3f99ba42809a579f1c920546fe-a81283ce9b0147ba83c898501d6a3325" name="b5dd9c3f99ba42809a579f1c920546fe" class="tab" checked><label for="b5dd9c3f99ba42809a579f1c920546fe-a81283ce9b0147ba83c898501d6a3325" >General</label>
-<input type="radio" id="b5dd9c3f99ba42809a579f1c920546fe-f2e4287f13324aa4a6b6db382d41a692" name="b5dd9c3f99ba42809a579f1c920546fe" class="tab" ><label for="b5dd9c3f99ba42809a579f1c920546fe-f2e4287f13324aa4a6b6db382d41a692" >Startup</label>
-<input type="radio" id="b5dd9c3f99ba42809a579f1c920546fe-c9b85f49c2d14e32a78a94d8c3b147f0" name="b5dd9c3f99ba42809a579f1c920546fe" class="tab" ><label for="b5dd9c3f99ba42809a579f1c920546fe-c9b85f49c2d14e32a78a94d8c3b147f0" >Android</label>
-<input type="radio" id="b5dd9c3f99ba42809a579f1c920546fe-c5d405e5981548fd8fae8ed97dd2448f" name="b5dd9c3f99ba42809a579f1c920546fe" class="tab" ><label for="b5dd9c3f99ba42809a579f1c920546fe-c5d405e5981548fd8fae8ed97dd2448f" >iOS</label>
-<input type="radio" id="b5dd9c3f99ba42809a579f1c920546fe-9c43a8785ccb4677ae4de5631a2dff9d" name="b5dd9c3f99ba42809a579f1c920546fe" class="tab" ><label for="b5dd9c3f99ba42809a579f1c920546fe-9c43a8785ccb4677ae4de5631a2dff9d" >Windows</label>
+<input type="radio" id="ca92aa2c8b114ea9a73d93ece07e70b5-2b8da0eac8ab435590e50e3704819ee2" name="ca92aa2c8b114ea9a73d93ece07e70b5" class="tab" checked><label for="ca92aa2c8b114ea9a73d93ece07e70b5-2b8da0eac8ab435590e50e3704819ee2" >General</label>
+<input type="radio" id="ca92aa2c8b114ea9a73d93ece07e70b5-fbb887941c9a41c5a60da14e13bfac90" name="ca92aa2c8b114ea9a73d93ece07e70b5" class="tab" ><label for="ca92aa2c8b114ea9a73d93ece07e70b5-fbb887941c9a41c5a60da14e13bfac90" >Startup</label>
+<input type="radio" id="ca92aa2c8b114ea9a73d93ece07e70b5-92ed7672453340c68c079c81c1124f00" name="ca92aa2c8b114ea9a73d93ece07e70b5" class="tab" ><label for="ca92aa2c8b114ea9a73d93ece07e70b5-92ed7672453340c68c079c81c1124f00" >Android</label>
+<input type="radio" id="ca92aa2c8b114ea9a73d93ece07e70b5-5f79204706d24d389271c22b6ad01d27" name="ca92aa2c8b114ea9a73d93ece07e70b5" class="tab" ><label for="ca92aa2c8b114ea9a73d93ece07e70b5-5f79204706d24d389271c22b6ad01d27" >iOS</label>
+<input type="radio" id="ca92aa2c8b114ea9a73d93ece07e70b5-47c4d86eca5e49c6b4c3c4d5a62a0ac8" name="ca92aa2c8b114ea9a73d93ece07e70b5" class="tab" ><label for="ca92aa2c8b114ea9a73d93ece07e70b5-47c4d86eca5e49c6b4c3c4d5a62a0ac8" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
