--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="6f2e13794fbe4cf5a2fe0ee5fe35f036-fd644a2c8ccd446d800476ea258212ea" name="6f2e13794fbe4cf5a2fe0ee5fe35f036" class="tab" checked><label for="6f2e13794fbe4cf5a2fe0ee5fe35f036-fd644a2c8ccd446d800476ea258212ea" >General</label>
-<input type="radio" id="6f2e13794fbe4cf5a2fe0ee5fe35f036-fd4858cdfe3646b882a2ad9260b6d779" name="6f2e13794fbe4cf5a2fe0ee5fe35f036" class="tab" ><label for="6f2e13794fbe4cf5a2fe0ee5fe35f036-fd4858cdfe3646b882a2ad9260b6d779" >Startup</label>
-<input type="radio" id="6f2e13794fbe4cf5a2fe0ee5fe35f036-3f46e6b36f1243a4953594edfcaddb71" name="6f2e13794fbe4cf5a2fe0ee5fe35f036" class="tab" ><label for="6f2e13794fbe4cf5a2fe0ee5fe35f036-3f46e6b36f1243a4953594edfcaddb71" >Android</label>
-<input type="radio" id="6f2e13794fbe4cf5a2fe0ee5fe35f036-afd4eb4a9e174785816c9024543756ee" name="6f2e13794fbe4cf5a2fe0ee5fe35f036" class="tab" ><label for="6f2e13794fbe4cf5a2fe0ee5fe35f036-afd4eb4a9e174785816c9024543756ee" >iOS</label>
-<input type="radio" id="6f2e13794fbe4cf5a2fe0ee5fe35f036-163543e935b142b29019c8efd8c0c046" name="6f2e13794fbe4cf5a2fe0ee5fe35f036" class="tab" ><label for="6f2e13794fbe4cf5a2fe0ee5fe35f036-163543e935b142b29019c8efd8c0c046" >Windows</label>
+<input type="radio" id="fa7e0512d80045e7b7a6b7fd26c5e28f-a3aec487b4a9423b8e4bb2d50cea792b" name="fa7e0512d80045e7b7a6b7fd26c5e28f" class="tab" checked><label for="fa7e0512d80045e7b7a6b7fd26c5e28f-a3aec487b4a9423b8e4bb2d50cea792b" >General</label>
+<input type="radio" id="fa7e0512d80045e7b7a6b7fd26c5e28f-d308b2eb0b3b47a6a9a2f46452109ac8" name="fa7e0512d80045e7b7a6b7fd26c5e28f" class="tab" ><label for="fa7e0512d80045e7b7a6b7fd26c5e28f-d308b2eb0b3b47a6a9a2f46452109ac8" >Startup</label>
+<input type="radio" id="fa7e0512d80045e7b7a6b7fd26c5e28f-336a4b4a98b8490aa0b468ae53b35a27" name="fa7e0512d80045e7b7a6b7fd26c5e28f" class="tab" ><label for="fa7e0512d80045e7b7a6b7fd26c5e28f-336a4b4a98b8490aa0b468ae53b35a27" >Android</label>
+<input type="radio" id="fa7e0512d80045e7b7a6b7fd26c5e28f-3eb233453b4440269f435afe4666346e" name="fa7e0512d80045e7b7a6b7fd26c5e28f" class="tab" ><label for="fa7e0512d80045e7b7a6b7fd26c5e28f-3eb233453b4440269f435afe4666346e" >iOS</label>
+<input type="radio" id="fa7e0512d80045e7b7a6b7fd26c5e28f-4820f3a5fca44d3f86ac53d8f31058e4" name="fa7e0512d80045e7b7a6b7fd26c5e28f" class="tab" ><label for="fa7e0512d80045e7b7a6b7fd26c5e28f-4820f3a5fca44d3f86ac53d8f31058e4" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
