--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="64bfbf8e2ee2434e938e309921554c7b-dc9b94aa197c40da8dc70a2fbf83df5a" name="64bfbf8e2ee2434e938e309921554c7b" class="tab" checked><label for="64bfbf8e2ee2434e938e309921554c7b-dc9b94aa197c40da8dc70a2fbf83df5a" >General</label>
-<input type="radio" id="64bfbf8e2ee2434e938e309921554c7b-8b5cfb8f8ed846b48570b49fffc455f2" name="64bfbf8e2ee2434e938e309921554c7b" class="tab" ><label for="64bfbf8e2ee2434e938e309921554c7b-8b5cfb8f8ed846b48570b49fffc455f2" >Startup</label>
-<input type="radio" id="64bfbf8e2ee2434e938e309921554c7b-d61082f860264b4b9572c09694d4ee2b" name="64bfbf8e2ee2434e938e309921554c7b" class="tab" ><label for="64bfbf8e2ee2434e938e309921554c7b-d61082f860264b4b9572c09694d4ee2b" >Android</label>
-<input type="radio" id="64bfbf8e2ee2434e938e309921554c7b-0b473fcff06b429698c1b6cb83a671b4" name="64bfbf8e2ee2434e938e309921554c7b" class="tab" ><label for="64bfbf8e2ee2434e938e309921554c7b-0b473fcff06b429698c1b6cb83a671b4" >iOS</label>
-<input type="radio" id="64bfbf8e2ee2434e938e309921554c7b-a2f99aa004864cdfa36fc86c30094f96" name="64bfbf8e2ee2434e938e309921554c7b" class="tab" ><label for="64bfbf8e2ee2434e938e309921554c7b-a2f99aa004864cdfa36fc86c30094f96" >Windows</label>
+<input type="radio" id="9b20b810c31b486987969c65c6f097e3-d896a1ecd170497ca1296e29828fb766" name="9b20b810c31b486987969c65c6f097e3" class="tab" checked><label for="9b20b810c31b486987969c65c6f097e3-d896a1ecd170497ca1296e29828fb766" >General</label>
+<input type="radio" id="9b20b810c31b486987969c65c6f097e3-57c6af6b17524b3197643684e2fa8f57" name="9b20b810c31b486987969c65c6f097e3" class="tab" ><label for="9b20b810c31b486987969c65c6f097e3-57c6af6b17524b3197643684e2fa8f57" >Startup</label>
+<input type="radio" id="9b20b810c31b486987969c65c6f097e3-b471543651284de0b6d01ff29a5adb4e" name="9b20b810c31b486987969c65c6f097e3" class="tab" ><label for="9b20b810c31b486987969c65c6f097e3-b471543651284de0b6d01ff29a5adb4e" >Android</label>
+<input type="radio" id="9b20b810c31b486987969c65c6f097e3-6e3c5f58c18940778695581e329d6108" name="9b20b810c31b486987969c65c6f097e3" class="tab" ><label for="9b20b810c31b486987969c65c6f097e3-6e3c5f58c18940778695581e329d6108" >iOS</label>
+<input type="radio" id="9b20b810c31b486987969c65c6f097e3-8503f13bc9224b8b93b956f840ab152b" name="9b20b810c31b486987969c65c6f097e3" class="tab" ><label for="9b20b810c31b486987969c65c6f097e3-8503f13bc9224b8b93b956f840ab152b" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
