--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="ece924fed57943aaaac9146663ad420e-afeacf2d74b8498fb72a395bc7c273b8" name="ece924fed57943aaaac9146663ad420e" class="tab" checked><label for="ece924fed57943aaaac9146663ad420e-afeacf2d74b8498fb72a395bc7c273b8" >General</label>
-<input type="radio" id="ece924fed57943aaaac9146663ad420e-13e88bd2347c4efabb160c565c103d1d" name="ece924fed57943aaaac9146663ad420e" class="tab" ><label for="ece924fed57943aaaac9146663ad420e-13e88bd2347c4efabb160c565c103d1d" >Startup</label>
-<input type="radio" id="ece924fed57943aaaac9146663ad420e-6a94bdc5116d40cc93fbb0c2dfbe362f" name="ece924fed57943aaaac9146663ad420e" class="tab" ><label for="ece924fed57943aaaac9146663ad420e-6a94bdc5116d40cc93fbb0c2dfbe362f" >Android</label>
-<input type="radio" id="ece924fed57943aaaac9146663ad420e-525b98ec39314c16aa589d9176e72311" name="ece924fed57943aaaac9146663ad420e" class="tab" ><label for="ece924fed57943aaaac9146663ad420e-525b98ec39314c16aa589d9176e72311" >iOS</label>
-<input type="radio" id="ece924fed57943aaaac9146663ad420e-907d057bef0a417f9207a654f3f112e6" name="ece924fed57943aaaac9146663ad420e" class="tab" ><label for="ece924fed57943aaaac9146663ad420e-907d057bef0a417f9207a654f3f112e6" >Windows</label>
+<input type="radio" id="2a31bd3b6b9744ca934f2670f8da3999-ba59649442194f02bd9a207b42d5949b" name="2a31bd3b6b9744ca934f2670f8da3999" class="tab" checked><label for="2a31bd3b6b9744ca934f2670f8da3999-ba59649442194f02bd9a207b42d5949b" >General</label>
+<input type="radio" id="2a31bd3b6b9744ca934f2670f8da3999-9218091c176d49608991618c587879c2" name="2a31bd3b6b9744ca934f2670f8da3999" class="tab" ><label for="2a31bd3b6b9744ca934f2670f8da3999-9218091c176d49608991618c587879c2" >Startup</label>
+<input type="radio" id="2a31bd3b6b9744ca934f2670f8da3999-c1965a519de14bb3bea54f2ff8c23c1c" name="2a31bd3b6b9744ca934f2670f8da3999" class="tab" ><label for="2a31bd3b6b9744ca934f2670f8da3999-c1965a519de14bb3bea54f2ff8c23c1c" >Android</label>
+<input type="radio" id="2a31bd3b6b9744ca934f2670f8da3999-eea1c4d79e1e4223a25fab28989f3ac0" name="2a31bd3b6b9744ca934f2670f8da3999" class="tab" ><label for="2a31bd3b6b9744ca934f2670f8da3999-eea1c4d79e1e4223a25fab28989f3ac0" >iOS</label>
+<input type="radio" id="2a31bd3b6b9744ca934f2670f8da3999-ec7e1000742141178fdc175819bb1ddc" name="2a31bd3b6b9744ca934f2670f8da3999" class="tab" ><label for="2a31bd3b6b9744ca934f2670f8da3999-ec7e1000742141178fdc175819bb1ddc" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
