--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="0791aab9d1554c2b916f88dd5edd1358-876b2deca0424903b35183cfb9020795" name="0791aab9d1554c2b916f88dd5edd1358" class="tab" checked><label for="0791aab9d1554c2b916f88dd5edd1358-876b2deca0424903b35183cfb9020795" >General</label>
-<input type="radio" id="0791aab9d1554c2b916f88dd5edd1358-a6eb9940f89c47468a779a6c4103d164" name="0791aab9d1554c2b916f88dd5edd1358" class="tab" ><label for="0791aab9d1554c2b916f88dd5edd1358-a6eb9940f89c47468a779a6c4103d164" >Startup</label>
-<input type="radio" id="0791aab9d1554c2b916f88dd5edd1358-6c14339d92a94c4d93ae6caec0909f1c" name="0791aab9d1554c2b916f88dd5edd1358" class="tab" ><label for="0791aab9d1554c2b916f88dd5edd1358-6c14339d92a94c4d93ae6caec0909f1c" >Android</label>
-<input type="radio" id="0791aab9d1554c2b916f88dd5edd1358-e98faa322f4e45eaa9f05544406b18e0" name="0791aab9d1554c2b916f88dd5edd1358" class="tab" ><label for="0791aab9d1554c2b916f88dd5edd1358-e98faa322f4e45eaa9f05544406b18e0" >iOS</label>
-<input type="radio" id="0791aab9d1554c2b916f88dd5edd1358-4825de2d8b8f40279ab002fe5f521ce0" name="0791aab9d1554c2b916f88dd5edd1358" class="tab" ><label for="0791aab9d1554c2b916f88dd5edd1358-4825de2d8b8f40279ab002fe5f521ce0" >Windows</label>
+<input type="radio" id="d385b1e12fcd4e24842167c4fb4b97c4-b0c9d6f8978c4b4b9b650418e8fd0f61" name="d385b1e12fcd4e24842167c4fb4b97c4" class="tab" checked><label for="d385b1e12fcd4e24842167c4fb4b97c4-b0c9d6f8978c4b4b9b650418e8fd0f61" >General</label>
+<input type="radio" id="d385b1e12fcd4e24842167c4fb4b97c4-5dd27a17b299442f8b704c7bc6ef6943" name="d385b1e12fcd4e24842167c4fb4b97c4" class="tab" ><label for="d385b1e12fcd4e24842167c4fb4b97c4-5dd27a17b299442f8b704c7bc6ef6943" >Startup</label>
+<input type="radio" id="d385b1e12fcd4e24842167c4fb4b97c4-ac74f88eb07c4525ac2f9b1ff1f8d0d4" name="d385b1e12fcd4e24842167c4fb4b97c4" class="tab" ><label for="d385b1e12fcd4e24842167c4fb4b97c4-ac74f88eb07c4525ac2f9b1ff1f8d0d4" >Android</label>
+<input type="radio" id="d385b1e12fcd4e24842167c4fb4b97c4-122722d3f69a423a9a1abde6f37a768a" name="d385b1e12fcd4e24842167c4fb4b97c4" class="tab" ><label for="d385b1e12fcd4e24842167c4fb4b97c4-122722d3f69a423a9a1abde6f37a768a" >iOS</label>
+<input type="radio" id="d385b1e12fcd4e24842167c4fb4b97c4-417b66599b224289b4e703d2918d333f" name="d385b1e12fcd4e24842167c4fb4b97c4" class="tab" ><label for="d385b1e12fcd4e24842167c4fb4b97c4-417b66599b224289b4e703d2918d333f" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
