--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="d3d9d1571be0401a90609fa96222bb9a-0a53eb590cc94648bd93cc941d58c8e7" name="d3d9d1571be0401a90609fa96222bb9a" class="tab" checked><label for="d3d9d1571be0401a90609fa96222bb9a-0a53eb590cc94648bd93cc941d58c8e7" >General</label>
-<input type="radio" id="d3d9d1571be0401a90609fa96222bb9a-6e6e043239bd41cda6a3bf4d5a7f7de2" name="d3d9d1571be0401a90609fa96222bb9a" class="tab" ><label for="d3d9d1571be0401a90609fa96222bb9a-6e6e043239bd41cda6a3bf4d5a7f7de2" >Startup</label>
-<input type="radio" id="d3d9d1571be0401a90609fa96222bb9a-60a56a124e0b4decb4830ed005a24a9e" name="d3d9d1571be0401a90609fa96222bb9a" class="tab" ><label for="d3d9d1571be0401a90609fa96222bb9a-60a56a124e0b4decb4830ed005a24a9e" >Android</label>
-<input type="radio" id="d3d9d1571be0401a90609fa96222bb9a-80507d9add4a47258bcee8cc2da5be17" name="d3d9d1571be0401a90609fa96222bb9a" class="tab" ><label for="d3d9d1571be0401a90609fa96222bb9a-80507d9add4a47258bcee8cc2da5be17" >iOS</label>
+<input type="radio" id="a72adcbfc4334768adcf9c61a2493f43-4fe27aaa8ef14ea3b36411848b3c72f3" name="a72adcbfc4334768adcf9c61a2493f43" class="tab" checked><label for="a72adcbfc4334768adcf9c61a2493f43-4fe27aaa8ef14ea3b36411848b3c72f3" >General</label>
+<input type="radio" id="a72adcbfc4334768adcf9c61a2493f43-23b76360e236475fa9b7544d78397ad8" name="a72adcbfc4334768adcf9c61a2493f43" class="tab" ><label for="a72adcbfc4334768adcf9c61a2493f43-23b76360e236475fa9b7544d78397ad8" >Startup</label>
+<input type="radio" id="a72adcbfc4334768adcf9c61a2493f43-220893d497d0418cb707bb6b44f1f586" name="a72adcbfc4334768adcf9c61a2493f43" class="tab" ><label for="a72adcbfc4334768adcf9c61a2493f43-220893d497d0418cb707bb6b44f1f586" >Android</label>
+<input type="radio" id="a72adcbfc4334768adcf9c61a2493f43-06e6b5b8ab0d4010a76ea0c1bff61fb1" name="a72adcbfc4334768adcf9c61a2493f43" class="tab" ><label for="a72adcbfc4334768adcf9c61a2493f43-06e6b5b8ab0d4010a76ea0c1bff61fb1" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
