--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -148,50 +148,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -278,6 +234,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -355,17 +355,23 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="5b1902aa5f1b46d28011dd99dcf5909b-dee15a9dd0fd42738040f1491db32b53" name="5b1902aa5f1b46d28011dd99dcf5909b" class="tab" checked=""><label for="5b1902aa5f1b46d28011dd99dcf5909b-dee15a9dd0fd42738040f1491db32b53">General</label>
-<input type="radio" id="5b1902aa5f1b46d28011dd99dcf5909b-4fd92c1bc60842a0a88b0846b3bc27bb" name="5b1902aa5f1b46d28011dd99dcf5909b" class="tab"><label for="5b1902aa5f1b46d28011dd99dcf5909b-4fd92c1bc60842a0a88b0846b3bc27bb">Startup</label>
-<input type="radio" id="5b1902aa5f1b46d28011dd99dcf5909b-2897a640532f40f68de93e1a8114b2f2" name="5b1902aa5f1b46d28011dd99dcf5909b" class="tab"><label for="5b1902aa5f1b46d28011dd99dcf5909b-2897a640532f40f68de93e1a8114b2f2">Android</label>
-<input type="radio" id="5b1902aa5f1b46d28011dd99dcf5909b-1dafef28dcf747faa325716e66df6720" name="5b1902aa5f1b46d28011dd99dcf5909b" class="tab"><label for="5b1902aa5f1b46d28011dd99dcf5909b-1dafef28dcf747faa325716e66df6720">iOS</label>
-<input type="radio" id="5b1902aa5f1b46d28011dd99dcf5909b-0446daba364c429a937518f7354cab87" name="5b1902aa5f1b46d28011dd99dcf5909b" class="tab"><label for="5b1902aa5f1b46d28011dd99dcf5909b-0446daba364c429a937518f7354cab87">Windows</label>
+<input type="radio" id="824a1a99b290450786c572718609c011-bb5a1026c6904971bfa447fb736b0722" name="824a1a99b290450786c572718609c011" class="tab" checked=""><label for="824a1a99b290450786c572718609c011-bb5a1026c6904971bfa447fb736b0722">General</label>
+<input type="radio" id="824a1a99b290450786c572718609c011-dae6845ddc8d49d5ab50225c2d66b7c0" name="824a1a99b290450786c572718609c011" class="tab"><label for="824a1a99b290450786c572718609c011-dae6845ddc8d49d5ab50225c2d66b7c0">Startup</label>
+<input type="radio" id="824a1a99b290450786c572718609c011-4dd9103b7d3f440d8ec00cd7edc8e350" name="824a1a99b290450786c572718609c011" class="tab"><label for="824a1a99b290450786c572718609c011-4dd9103b7d3f440d8ec00cd7edc8e350">Android</label>
+<input type="radio" id="824a1a99b290450786c572718609c011-cdef17d5188740089f8af78a7fc737f1" name="824a1a99b290450786c572718609c011" class="tab"><label for="824a1a99b290450786c572718609c011-cdef17d5188740089f8af78a7fc737f1">iOS</label>
+<input type="radio" id="824a1a99b290450786c572718609c011-9d83b738aa174493ada15a0d2386439a" name="824a1a99b290450786c572718609c011" class="tab"><label for="824a1a99b290450786c572718609c011-9d83b738aa174493ada15a0d2386439a">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -447,11 +453,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="cd31a4633df34abd8fc3de47aeaae3bd-cb03d59a2c874f03934538dcedbf2f27" name="cd31a4633df34abd8fc3de47aeaae3bd" class="tab" checked=""><label for="cd31a4633df34abd8fc3de47aeaae3bd-cb03d59a2c874f03934538dcedbf2f27">General</label>
-<input type="radio" id="cd31a4633df34abd8fc3de47aeaae3bd-ab800e1c58304f1fae5d4fd4bb7a8833" name="cd31a4633df34abd8fc3de47aeaae3bd" class="tab"><label for="cd31a4633df34abd8fc3de47aeaae3bd-ab800e1c58304f1fae5d4fd4bb7a8833">Startup</label>
-<input type="radio" id="cd31a4633df34abd8fc3de47aeaae3bd-d9d1d8b4735c467b9deaa7583d102f56" name="cd31a4633df34abd8fc3de47aeaae3bd" class="tab"><label for="cd31a4633df34abd8fc3de47aeaae3bd-d9d1d8b4735c467b9deaa7583d102f56">Android</label>
-<input type="radio" id="cd31a4633df34abd8fc3de47aeaae3bd-b89f0ffc91f64f3fba2b1fb5c2a09f6d" name="cd31a4633df34abd8fc3de47aeaae3bd" class="tab"><label for="cd31a4633df34abd8fc3de47aeaae3bd-b89f0ffc91f64f3fba2b1fb5c2a09f6d">iOS</label>
-<input type="radio" id="cd31a4633df34abd8fc3de47aeaae3bd-17089cd3028d4f829e0212aa01dbb85b" name="cd31a4633df34abd8fc3de47aeaae3bd" class="tab"><label for="cd31a4633df34abd8fc3de47aeaae3bd-17089cd3028d4f829e0212aa01dbb85b">Windows</label>
+<input type="radio" id="074263e4d93a4a2abb1e4c09a91100f4-7493950a21ca4cbd9c47be06837751e2" name="074263e4d93a4a2abb1e4c09a91100f4" class="tab" checked=""><label for="074263e4d93a4a2abb1e4c09a91100f4-7493950a21ca4cbd9c47be06837751e2">General</label>
+<input type="radio" id="074263e4d93a4a2abb1e4c09a91100f4-53e921211a8d407aa904251238fa5400" name="074263e4d93a4a2abb1e4c09a91100f4" class="tab"><label for="074263e4d93a4a2abb1e4c09a91100f4-53e921211a8d407aa904251238fa5400">Startup</label>
+<input type="radio" id="074263e4d93a4a2abb1e4c09a91100f4-00a9f5bb4fa64ca9a8d8a6f489ba6cc8" name="074263e4d93a4a2abb1e4c09a91100f4" class="tab"><label for="074263e4d93a4a2abb1e4c09a91100f4-00a9f5bb4fa64ca9a8d8a6f489ba6cc8">Android</label>
+<input type="radio" id="074263e4d93a4a2abb1e4c09a91100f4-abfb318b43ad44fcbacf10397b20d43a" name="074263e4d93a4a2abb1e4c09a91100f4" class="tab"><label for="074263e4d93a4a2abb1e4c09a91100f4-abfb318b43ad44fcbacf10397b20d43a">iOS</label>
+<input type="radio" id="074263e4d93a4a2abb1e4c09a91100f4-0c522c7bb45b42e49342756d7a97201b" name="074263e4d93a4a2abb1e4c09a91100f4" class="tab"><label for="074263e4d93a4a2abb1e4c09a91100f4-0c522c7bb45b42e49342756d7a97201b">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
