--- a/locations/gps.html
+++ b/locations/gps.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children active">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,18 +357,24 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="5f54953fb0374457b65751731a238ffb-d003462d8fa6498b9d0e36e4be31e7db" name="5f54953fb0374457b65751731a238ffb" class="tab" checked><label for="5f54953fb0374457b65751731a238ffb-d003462d8fa6498b9d0e36e4be31e7db" >General</label>
-<input type="radio" id="5f54953fb0374457b65751731a238ffb-dbb26fcbf58e4c3bb45a5f062ae0e1ba" name="5f54953fb0374457b65751731a238ffb" class="tab" ><label for="5f54953fb0374457b65751731a238ffb-dbb26fcbf58e4c3bb45a5f062ae0e1ba" >Startup</label>
-<input type="radio" id="5f54953fb0374457b65751731a238ffb-b8a89ce9f4bf4f23baf4c8d61a1a0dfd" name="5f54953fb0374457b65751731a238ffb" class="tab" ><label for="5f54953fb0374457b65751731a238ffb-b8a89ce9f4bf4f23baf4c8d61a1a0dfd" >Android</label>
-<input type="radio" id="5f54953fb0374457b65751731a238ffb-23d3a218fa994091a527e4446eb1327b" name="5f54953fb0374457b65751731a238ffb" class="tab" ><label for="5f54953fb0374457b65751731a238ffb-23d3a218fa994091a527e4446eb1327b" >iOS</label>
-<input type="radio" id="5f54953fb0374457b65751731a238ffb-b078f67d21b642d684ec6842bf53a49a" name="5f54953fb0374457b65751731a238ffb" class="tab" ><label for="5f54953fb0374457b65751731a238ffb-b078f67d21b642d684ec6842bf53a49a" >Windows</label>
+<input type="radio" id="13fcc979aaed4128bacf5b642c392e1b-777e81bbc4394ce3a2603d574e354a11" name="13fcc979aaed4128bacf5b642c392e1b" class="tab" checked><label for="13fcc979aaed4128bacf5b642c392e1b-777e81bbc4394ce3a2603d574e354a11" >General</label>
+<input type="radio" id="13fcc979aaed4128bacf5b642c392e1b-3c97a21aeaf64662b58d1ea16aec6c9b" name="13fcc979aaed4128bacf5b642c392e1b" class="tab" ><label for="13fcc979aaed4128bacf5b642c392e1b-3c97a21aeaf64662b58d1ea16aec6c9b" >Startup</label>
+<input type="radio" id="13fcc979aaed4128bacf5b642c392e1b-a9f2d749a96e4bc881a1e6ad3f20e479" name="13fcc979aaed4128bacf5b642c392e1b" class="tab" ><label for="13fcc979aaed4128bacf5b642c392e1b-a9f2d749a96e4bc881a1e6ad3f20e479" >Android</label>
+<input type="radio" id="13fcc979aaed4128bacf5b642c392e1b-9d7b71abfead47bc8074e7b044ed2d59" name="13fcc979aaed4128bacf5b642c392e1b" class="tab" ><label for="13fcc979aaed4128bacf5b642c392e1b-9d7b71abfead47bc8074e7b044ed2d59" >iOS</label>
+<input type="radio" id="13fcc979aaed4128bacf5b642c392e1b-e83b3355f7ef4cedb7978541618736cb" name="13fcc979aaed4128bacf5b642c392e1b" class="tab" ><label for="13fcc979aaed4128bacf5b642c392e1b-e83b3355f7ef4cedb7978541618736cb" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
