--- a/release-notes/231.html
+++ b/release-notes/231.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Extensions</title>
+    <title>Shiny.NET - v2.3.1</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Extensions</div>
+                                <div class="text-white m-0 title">v2.3.1</div>
                             </div>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/framework/gettingstarted">Getting Started</a>
                                                         </div>
@@ -218,7 +218,7 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/framework/localization">Localization</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child active">
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/framework/extensions">Extensions</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -343,7 +343,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/release-notes">Release Notes</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
@@ -359,7 +359,7 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
+                                                        <div class="sidebar-nav-child active">
                                                             <a href="/release-notes/231">v2.3.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -368,22 +368,24 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <p>TODO</p>
-<pre><code class="language-csharp">OpenAppSettingsIf(this IDialogs dialogs, Func&lt;Task&lt;AccessState&gt;&gt; accessRequest, string deniedMessage, string restrictedMessage)
-ICommand ConfirmCommand(this IDialogs dialogs, Func&lt;Task&gt; action, string question, string title = &quot;Confirm&quot;, string okText = &quot;OK&quot;, string cancelText = &quot;Cancel&quot;)
-IObservable&lt;string&gt; ObserveTimeAgo(this DateTimeOffset dt, Func&lt;TimeSpan, string&gt; transformer, TimeSpan? intervalTime = null)
-
-void WhenAnyValueSelected&lt;TViewModel, TRet&gt;(this TViewModel viewModel, Expression&lt;Func&lt;TViewModel, TRet&gt;&gt; expression, Action&lt;TRet&gt; action) where TViewModel : ViewModel
-this.WhenAnyValueSelected(x =&gt; x.MySelectedItem, x =&gt; {});
-
-SubOnMainThread
-IDisposable ApplyMaxLengthConstraint&lt;T&gt;(this T npc, Expression&lt;Func&lt;T, string&gt;&gt; expression, int maxLength) where T : INotifyPropertyChanged
-IDisposable ApplyValueRangeConstraint&lt;T&gt;(this T npc, Expression&lt;Func&lt;T, int&gt;&gt; expression, int min, int max) where T : INotifyPropertyChanged
-</code></pre>
+                                    <h2 id="core">Core</h2>
+<ul>
+<li>[Fix] Message bus named events were not being published properly <a href="https://github.com/shinyorg/shiny/issues/772">GH-772</a></li>
+<li>[Fix] Android 11+ opens a complete app when requesting permissions for location, thus permission requests could fail on Shiny in race scenarios.  Shiny no longer checks if the request is made on the foreground</li>
+</ul>
+<h2 id="locations">Locations</h2>
+<ul>
+<li>[Fix][Android] Location permissions for background must be done separate from other permissions now as per Android 11+</li>
+<li>[Fix][Android] Locations permission on Android 12 requires coarse &amp; fine permissions, even if you only need fine</li>
+</ul>
+<h2 id="notifications">Notifications</h2>
+<ul>
+<li>[Fix][Android] Channels were not being set <a href="https://github.com/shinyorg/shiny/pull/774">GH-774</a></li>
+</ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/framework/extensions.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/231.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
