--- a/release-notes/nextrelease.html
+++ b/release-notes/nextrelease.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - v2.3.0</title>
+    <title>Shiny.NET - v2.4.0</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">v2.3.0</div>
+                                <div class="text-white m-0 title">v2.4.0</div>
                             </div>
                         </div>
                     </div>
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -356,63 +356,19 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
                                                         <div class="sidebar-nav-child active">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <h3 id="core">Core</h3>
-<ul>
-<li>[BREAKING] Jobs has been moved from Shiny.Core to its own module Shiny.Jobs</li>
-<li>[BREAKING][iOS] Default store is now secure storage (KeyChain) to deal with potential auto-start issues before device has been unlocked</li>
-<li>[Enhancement] Object binding failures now log specifics on what failed</li>
-<li>[Fix] Startup registration was failing on optional delegates</li>
-<li>[Fix] Update job registration to Shiny.Jobs</li>
-</ul>
-<h3 id="bluetoothle">BluetoothLE</h3>
-<ul>
-<li>[Fix] Managed Scan Result now returns as IAdvertisementData for consistency</li>
-<li>[Fix] ManagedScan.Start is now async to expose permission issues before starting the scan <a href="https://github.com/shinyorg/shiny/issues/698">GH-698</a></li>
-<li>[Fix] ManagedScan.Toggle has been moved to an extension method</li>
-</ul>
-<h3 id="beacons">Beacons</h3>
-<ul>
-<li>[Enhancement] Managed beacon ranging scan now has Start as async so permissions can be checked</li>
-<li>[Fix] ManagedBeacon result now includes the region identifier</li>
-</ul>
-<h3 id="locations">Locations</h3>
-<ul>
-<li>[Enhancement] GpsManager.GetCurrentPosition will start/stop the GPS tracking only if it wasn't started before</li>
-<li>[Enhancement] IGpsManager.StartAndReceive starts GPS when subscribe and turns it off when unsubscribed OR the app goes to the background</li>
-<li>[Fix] GPS setting state is only written to settings if background is used</li>
-<li>[Fix][iOS] Will only attempt to auto-start the GPS tracking in background if authorization status has been fully granted (Always Allow)</li>
-</ul>
-<h3 id="jobs">Jobs</h3>
-<ul>
-<li>[Enhancement] UsesJobs now allows you to manually register the job manager - RegisterJob will call this automatically</li>
-<li>[Enhancement] Foregrounding is now always available if you set your job as &quot;RunInForeground&quot;, there is no need to call UseForegroundJobs</li>
-<li>[Fix][iOS] BGTasks - Correct filters applied to all modes</li>
-<li>[Fix] Move up exception base for missing job types due to the job being deleted or renamed <a href="https://github.com/shinyorg/shiny/issues/762">GH-762</a></li>
-</ul>
-<h3 id="notifications">Notifications</h3>
-<ul>
-<li>[Enhancement] Foreground service notifications will use channel that does not show application badge notification <a href="https://github.com/shinyorg/shiny/issues/734">GH-734</a></li>
-<li>[Enhancement] Custom sounds work for critical notifications <a href="https://github.com/shinyorg/shiny/pull/757">GH-757</a></li>
-</ul>
-<h3 id="push">Push</h3>
-<ul>
-<li>[BREAKING] IPushDelegate.OnTokenChanged is now called IPushDelegate.OnTokenRefreshed</li>
-<li>[BREAKING] Channels are no longer registered within Push.  Use INotificationManager to do this.  If you need more customization over notification, send data messages and use INotificationManager</li>
-<li>[Fix][Android] OnEntry now functions under all modules</li>
-<li>[Fix][iOS][Native] IPushDelegate.OnTokenChanged is no longer called by RequestAccess and the proper token is returned</li>
-</ul>
-<h3 id="push-azure-notification-hubs">Push - Azure Notification Hubs</h3>
-<ul>
-<li>[Fix] ANH can often fail with &quot;Microsoft.Azure.NotificationHubs.Messaging.MessagingEntityNotFoundException: Installation not found.TrackingId:XXXX&quot; for rapid calls (ie. RequestAccess immediately followed by SetTags)</li>
-<li>[Enhancement] You can now configure a timespan for when azure installations should expire if not used.</li>
-</ul>
-
+                                    
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
                                     <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/nextrelease.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
