--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -150,50 +150,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -280,6 +236,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,16 +357,22 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
+                                                            <a href="/release-notes/v230">v2.3.0</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">v2.4.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="0d6db7d650964dfd9f44f6378562e6dc-1950e2d3a968499f971ad2af245d0dea" name="0d6db7d650964dfd9f44f6378562e6dc" class="tab" checked><label for="0d6db7d650964dfd9f44f6378562e6dc-1950e2d3a968499f971ad2af245d0dea" >General</label>
-<input type="radio" id="0d6db7d650964dfd9f44f6378562e6dc-39b6207ceade405fbfc205c3c8a86eb6" name="0d6db7d650964dfd9f44f6378562e6dc" class="tab" ><label for="0d6db7d650964dfd9f44f6378562e6dc-39b6207ceade405fbfc205c3c8a86eb6" >Startup</label>
-<input type="radio" id="0d6db7d650964dfd9f44f6378562e6dc-c2fed136907c4862afe924bdcfa776ab" name="0d6db7d650964dfd9f44f6378562e6dc" class="tab" ><label for="0d6db7d650964dfd9f44f6378562e6dc-c2fed136907c4862afe924bdcfa776ab" >Android</label>
-<input type="radio" id="0d6db7d650964dfd9f44f6378562e6dc-000fbec5ab484835924ec8be2a3bf1d6" name="0d6db7d650964dfd9f44f6378562e6dc" class="tab" ><label for="0d6db7d650964dfd9f44f6378562e6dc-000fbec5ab484835924ec8be2a3bf1d6" >Windows</label>
+<input type="radio" id="2798e7b2263048d1b13cd1e9a9cec7c7-9c3cb7217eaf4701ba9f7b15254c4c58" name="2798e7b2263048d1b13cd1e9a9cec7c7" class="tab" checked><label for="2798e7b2263048d1b13cd1e9a9cec7c7-9c3cb7217eaf4701ba9f7b15254c4c58" >General</label>
+<input type="radio" id="2798e7b2263048d1b13cd1e9a9cec7c7-b8c8a10ab78e40d6930394058be4be6d" name="2798e7b2263048d1b13cd1e9a9cec7c7" class="tab" ><label for="2798e7b2263048d1b13cd1e9a9cec7c7-b8c8a10ab78e40d6930394058be4be6d" >Startup</label>
+<input type="radio" id="2798e7b2263048d1b13cd1e9a9cec7c7-deb310656e5f4fc1a5053d483c038956" name="2798e7b2263048d1b13cd1e9a9cec7c7" class="tab" ><label for="2798e7b2263048d1b13cd1e9a9cec7c7-deb310656e5f4fc1a5053d483c038956" >Android</label>
+<input type="radio" id="2798e7b2263048d1b13cd1e9a9cec7c7-cc772cf5041d4e81915b41f8aea7a48b" name="2798e7b2263048d1b13cd1e9a9cec7c7" class="tab" ><label for="2798e7b2263048d1b13cd1e9a9cec7c7-cc772cf5041d4e81915b41f8aea7a48b" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
